#	$Id$	

Changelog for HylaFAX

* add comments for enscript typerules entry (27 Sep 2005)
* document JobFmt Y option (27 Sep 2005)
* improve JDELE hfaxd handling (27 Sep 2005)
* be more informative with /dev/null errors (27 Sep 2005)
* don't place a call if there are no documents (27 Sep 2005)
* make hfaxd clean up after itself (27 Sep 2005)
* add xferfaxlog accounting for jobs that time out (27 Sep 2005)
* add a job abort notification message (27 Sep 2005)
* requeue batches together (27 Sep 2005)
* add IXO/TAP page batching (27 Sep 2005)
* fix Class 1 handling of EOM in pagehandling (27 Sep 2005)
* improve dataformat reporting and handling (27 Sep 2005)
* add JBIG send support (27 Sep 2005)
* add hasV17Trouble detection on sending (27 Sep 2005)
* improve NSF station ID detection (27 Sep 2005)
* session logging improvements (27 Sep 2005)
* add Retransmit-Ignore RTNHandlingMethod (27 Sep 2005)

Changelog for HylaFAX 4.2.2

* fix error of confirming an ECM block missing frames other
  than the last frame when a null block is received (16 Sep 2005)
* fix error of tiffcheck missing needed reformatting (17 Aug 2005)
* add workaround for a bug in recent versions of gawk (15 Aug 2005)
* fix send error causing ECM data to not get sent (15 Aug 2005)
* homogenize default user id for user files (9 Aug 2005)
* remove deprecated cuserid (8 Aug 2005)
* fix some problems with sender notifications (5 Aug 2005)
* fix problem with PAM authentication features (2 Aug 2005)
* fix potential hang on reading data from modem (30 Jul 2005)
* fix potential hang on detecting an ECM block end (29 Jul 2005)
* fix job batches to properly release modems (26 Jul 2005)
* fix build error with Mac OS X 10.4 (26 Jul 2005)
* fix sendfax crash with verbose output (25, 29 Jul 2005)
* fix a race with scheduled jobs to allow for coordinated
  batch sending (25 Jul, 10 Aug 2005)
* fix some error conditions with JBIG and JPEG reception (25 Jul 2005)
* improve probemodem results for some modems (16 Jul 2005)